# modalities

./: README.md  modalities.cabal  stack.yaml
paper/: paper.bib  paper.md  preamble.tex  test-script
src/Logic/: Modal.hs
