name:                modalities
version:             0.1.0.0
synopsis:            Implementation of modal logic in Haskell
description:         Please see README.md
homepage:            https://github.com/parsonsmatt/modalities#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matthew Parsons
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Logic.Modal
  build-depends:       base >= 4.7 && < 5
                     , adjunctions
                     , comonad
                     , semigroupoids
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses

executable modalities-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , modalities
  default-language:    Haskell2010

test-suite modalities-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , modalities
--                     , hspec
--                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/modalities
